created weather and entertainment modules

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 
 PORT=<your-port>
 DB_URL=<mongodb+srv://[username]:[password]@atlascluster.9t5hdkh.mongodb.net/?retryWrites=true&w=majority>
+TM_API=<your-api>
+
 
