--- a/.env.sample
+++ b/.env.sample
@@ -2,5 +2,6 @@
 PORT=<your-port>
 DB_URL=<mongodb+srv://[username]:[password]@atlascluster.9t5hdkh.mongodb.net/?retryWrites=true&w=majority>
 TM_API=<your-api>
+WEATHER_API=<your-api>
 
 
