weatherdisplay done. pushing for group sync

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ PORT=<your-port>
 WEATHER_API=<your-api>
 
 DB_ENDPOINT=https://data.mongodb-api.com/app/data-zimwa/endpoint/data/v1
+
+REACT_APP_ctyxplr_API_KEY=<Your city explorer API key>
